pegjs/tm1.js
tm1parser = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { ruleFile: peg$parseruleFile },
        peg$startRuleFunction  = peg$parseruleFile,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = function(r, f) {

        return f!=null?{RULES_FILE:[{RULES:r},{FEEDERS:f}]}:{RULES_FILE:[{RULES:r}]};},
        peg$c3 = [],
        peg$c4 = function(p) {return p},
        peg$c5 = function(r) {return r},
        peg$c6 = /^[\n\t\r ]/,
        peg$c7 = { type: "class", value: "[\\n\\t\\r ]", description: "[\\n\\t\\r ]" },
        peg$c8 = "<br/>",
        peg$c9 = { type: "literal", value: "<br/>", description: "\"<br/>\"" },
        peg$c10 = "<br>",
        peg$c11 = { type: "literal", value: "<br>", description: "\"<br>\"" },
        peg$c12 = "#",
        peg$c13 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c14 = /^[^\n]/,
        peg$c15 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c16 = ";",
        peg$c17 = { type: "literal", value: ";", description: "\";\"" },
        peg$c18 = function(f) {return f;},
        peg$c19 = function(p) {return {PRAGMA: p}},
        peg$c20 = "=",
        peg$c21 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c22 = function(a, r) { var x =[];
          x.push(a);
          x.push(r.pop());
           return {RULE_DEF: x};
        },
        peg$c23 = function(e) {var x =[]; x.push(e);return x;},
        peg$c24 = ":",
        peg$c25 = { type: "literal", value: ":", description: "\":\"" },
        peg$c26 = function(l, e) {var x = [];
        x.push({LEVEL_EXPR: l});x.push(e);return x;},
        peg$c27 = /^[N]/,
        peg$c28 = { type: "class", value: "[N]", description: "[N]" },
        peg$c29 = /^[n]/,
        peg$c30 = { type: "class", value: "[n]", description: "[n]" },
        peg$c31 = function() {return "N_LEVEL"},
        peg$c32 = /^[S]/,
        peg$c33 = { type: "class", value: "[S]", description: "[S]" },
        peg$c34 = /^[s]/,
        peg$c35 = { type: "class", value: "[s]", description: "[s]" },
        peg$c36 = function() {return "S_LEVEL"},
        peg$c37 = /^[C]/,
        peg$c38 = { type: "class", value: "[C]", description: "[C]" },
        peg$c39 = /^[c]/,
        peg$c40 = { type: "class", value: "[c]", description: "[c]" },
        peg$c41 = function() {return "C_LEVEL"},
        peg$c42 = "=>",
        peg$c43 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c44 = function(a, e) {return [a,e];},
        peg$c45 = function(e) {return e;},
        peg$c46 = "%",
        peg$c47 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c48 = function(l, r) {return {"%":[l,r]};},
        peg$c49 = "&",
        peg$c50 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c51 = function(l, r) {return {"&":[l,r]};},
        peg$c52 = function(l, r) {return {"=":[l,r]};},
        peg$c53 = "<>",
        peg$c54 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c55 = function(l, r) {return {"<>":[l,r]};},
        peg$c56 = ">",
        peg$c57 = { type: "literal", value: ">", description: "\">\"" },
        peg$c58 = function(l, r) {return {">":[l,r]};},
        peg$c59 = "<",
        peg$c60 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c61 = function(l, r) {return {"<":[l,r]};},
        peg$c62 = "<=",
        peg$c63 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c64 = function(l, r) {return {"<=":[l,r]};},
        peg$c65 = ">=",
        peg$c66 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c67 = function(l, r) {return {">=":[l,r]};},
        peg$c68 = "@=",
        peg$c69 = { type: "literal", value: "@=", description: "\"@=\"" },
        peg$c70 = function(l, r) {return {"@=":[l,r]};},
        peg$c71 = "@<>",
        peg$c72 = { type: "literal", value: "@<>", description: "\"@<>\"" },
        peg$c73 = function(l, r) {return {"@<>":[l,r]};},
        peg$c74 = "@>",
        peg$c75 = { type: "literal", value: "@>", description: "\"@>\"" },
        peg$c76 = function(l, r) {return {"@>":[l,r]};},
        peg$c77 = "@<",
        peg$c78 = { type: "literal", value: "@<", description: "\"@<\"" },
        peg$c79 = function(l, r) {return {"@<":[l,r]};},
        peg$c80 = "@<=",
        peg$c81 = { type: "literal", value: "@<=", description: "\"@<=\"" },
        peg$c82 = function(l, r) {return {"@<=":[l,r]};},
        peg$c83 = "@>=",
        peg$c84 = { type: "literal", value: "@>=", description: "\"@>=\"" },
        peg$c85 = function(l, r) {return {"@>=":[l,r]};},
        peg$c86 = "+",
        peg$c87 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c88 = function(l, r) {return {"+":[l,r]};},
        peg$c89 = "-",
        peg$c90 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c91 = function(l, r) {return {"-":[l,r]};},
        peg$c92 = "|",
        peg$c93 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c94 = function(l, r) {return {"|":[l,r]};},
        peg$c95 = "*",
        peg$c96 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c97 = function(l, r) {return {"*":[l,r]};},
        peg$c98 = "/",
        peg$c99 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c100 = function(l, r) {return {"/":[l,r]};},
        peg$c101 = "\\",
        peg$c102 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c103 = function(l, r) {return {"\\":[l,r]};},
        peg$c104 = "^",
        peg$c105 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c106 = function(l, r) {return {"^":[l,r]};},
        peg$c107 = function(e) {return {"+":e};},
        peg$c108 = function(e) {return {"-":e};},
        peg$c109 = "~",
        peg$c110 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c111 = function(e) {return {"~":e};},
        peg$c112 = "(",
        peg$c113 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c114 = ")",
        peg$c115 = { type: "literal", value: ")", description: "\")\"" },
        peg$c116 = function(i, e) {var a = []; a.push(i); 
        if(e!=null){
        a.push(e);}
        else{
        var x =[];
        a.push({EXPR_LIST:x});
        }
        return {FUNCTION: a}},
        peg$c117 = "[",
        peg$c118 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c119 = "]",
        peg$c120 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c121 = function(a) {

        return a!=null?{AREA_DEFN : a}:{AREA_DEFN : []};
        },
        peg$c122 = ",",
        peg$c123 = { type: "literal", value: ",", description: "\",\"" },
        peg$c124 = function(i) {return i},
        peg$c125 = function(a, b) {
         if(b.length>0){
          b.unshift(a);
          return b;
         }else{
          var x = [];
          x.push(a);
          return x;
         }
        },
        peg$c126 = function(a, i) {var x ={AREA_SCOPE:a}; var y ={AREA_ITEMS:i};var z =[]; z.push(x);z.push(y);return z;},
        peg$c127 = "{",
        peg$c128 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c129 = "}",
        peg$c130 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c131 = function(s) {return s==null?{AREA_ITEM_SET: []}:{AREA_ITEM_SET: s}},
        peg$c132 = function(e) {return {EXPR_LIST:e}},
        peg$c133 = function(s) {return s;},
        peg$c134 = function() {return "CONTINUE";},
        peg$c135 = function() {return "STET";},
        peg$c136 = function() {return "FEEDERS";},
        peg$c137 = function() {return "SKIPCHECK";},
        peg$c138 = function() {return "UNDEFVALS";},
        peg$c139 = function() {return "FEEDSTRINGS";},
        peg$c140 = function(t) {return {IDENTIFIER: t};},
        peg$c141 = function(t) {return {BANG_IDENTIFIER: t};},
        peg$c142 = function(t) {return {NUMBER: t};},
        peg$c143 = function(t) {return {STRING: t};},
        peg$c144 = /^[O]/,
        peg$c145 = { type: "class", value: "[O]", description: "[O]" },
        peg$c146 = /^[o]/,
        peg$c147 = { type: "class", value: "[o]", description: "[o]" },
        peg$c148 = /^[T]/,
        peg$c149 = { type: "class", value: "[T]", description: "[T]" },
        peg$c150 = /^[t]/,
        peg$c151 = { type: "class", value: "[t]", description: "[t]" },
        peg$c152 = /^[I]/,
        peg$c153 = { type: "class", value: "[I]", description: "[I]" },
        peg$c154 = /^[i]/,
        peg$c155 = { type: "class", value: "[i]", description: "[i]" },
        peg$c156 = /^[U]/,
        peg$c157 = { type: "class", value: "[U]", description: "[U]" },
        peg$c158 = /^[u]/,
        peg$c159 = { type: "class", value: "[u]", description: "[u]" },
        peg$c160 = /^[E]/,
        peg$c161 = { type: "class", value: "[E]", description: "[E]" },
        peg$c162 = /^[e]/,
        peg$c163 = { type: "class", value: "[e]", description: "[e]" },
        peg$c164 = /^[F]/,
        peg$c165 = { type: "class", value: "[F]", description: "[F]" },
        peg$c166 = /^[f]/,
        peg$c167 = { type: "class", value: "[f]", description: "[f]" },
        peg$c168 = /^[D]/,
        peg$c169 = { type: "class", value: "[D]", description: "[D]" },
        peg$c170 = /^[d]/,
        peg$c171 = { type: "class", value: "[d]", description: "[d]" },
        peg$c172 = /^[R]/,
        peg$c173 = { type: "class", value: "[R]", description: "[R]" },
        peg$c174 = /^[r]/,
        peg$c175 = { type: "class", value: "[r]", description: "[r]" },
        peg$c176 = /^[K]/,
        peg$c177 = { type: "class", value: "[K]", description: "[K]" },
        peg$c178 = /^[k]/,
        peg$c179 = { type: "class", value: "[k]", description: "[k]" },
        peg$c180 = /^[P]/,
        peg$c181 = { type: "class", value: "[P]", description: "[P]" },
        peg$c182 = /^[p]/,
        peg$c183 = { type: "class", value: "[p]", description: "[p]" },
        peg$c184 = /^[H]/,
        peg$c185 = { type: "class", value: "[H]", description: "[H]" },
        peg$c186 = /^[h]/,
        peg$c187 = { type: "class", value: "[h]", description: "[h]" },
        peg$c188 = /^[V]/,
        peg$c189 = { type: "class", value: "[V]", description: "[V]" },
        peg$c190 = /^[v]/,
        peg$c191 = { type: "class", value: "[v]", description: "[v]" },
        peg$c192 = /^[A]/,
        peg$c193 = { type: "class", value: "[A]", description: "[A]" },
        peg$c194 = /^[a]/,
        peg$c195 = { type: "class", value: "[a]", description: "[a]" },
        peg$c196 = /^[L]/,
        peg$c197 = { type: "class", value: "[L]", description: "[L]" },
        peg$c198 = /^[l]/,
        peg$c199 = { type: "class", value: "[l]", description: "[l]" },
        peg$c200 = /^[G]/,
        peg$c201 = { type: "class", value: "[G]", description: "[G]" },
        peg$c202 = /^[g]/,
        peg$c203 = { type: "class", value: "[g]", description: "[g]" },
        peg$c204 = /^[a-zA-Z_]/,
        peg$c205 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c206 = function(i) {return i.join("");},
        peg$c207 = "!",
        peg$c208 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c209 = /^[^)\^,\^;\^|\^@\^\\\^\/\^:\^*\^=\^?\^"\^<\^>]/,
        peg$c210 = { type: "class", value: "[^)\\^,\\^;\\^|\\^@\\^\\\\\\^\\/\\^:\\^*\\^=\\^?\\^\"\\^<\\^>]", description: "[^)\\^,\\^;\\^|\\^@\\^\\\\\\^\\/\\^:\\^*\\^=\\^?\\^\"\\^<\\^>]" },
        peg$c211 = function(i) {return "!" + i.join("");},
        peg$c212 = /^[0-9]/,
        peg$c213 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c214 = ".",
        peg$c215 = { type: "literal", value: ".", description: "\".\"" },
        peg$c216 = function(d) {return "."+d.join("");},
        peg$c217 = /^[+]/,
        peg$c218 = { type: "class", value: "[+]", description: "[+]" },
        peg$c219 = /^[\-]/,
        peg$c220 = { type: "class", value: "[\\-]", description: "[\\-]" },
        peg$c221 = function(e, f, g) {return f==null?(g.length==0?e:(e+g.join(""))):(g.length==0?(e+f):(e+f+g.join("")));},
        peg$c222 = function(a, b, c) {return b==null?(c==null?a.join(""):a.join("")+c):(c==null?a.join("")+b:a.join("")+b+c);},
        peg$c223 = "'",
        peg$c224 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c225 = /^[^']/,
        peg$c226 = { type: "class", value: "[^']", description: "[^']" },
        peg$c227 = function(s) {return s.join("");},

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$cache = {},
        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseruleFile() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 52 + 0,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseskip();
      if (s1 !== peg$FAILED) {
        s2 = peg$parserules();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseskip();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsefeeders();
            if (s4 === peg$FAILED) {
              s4 = peg$c1;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseskip();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c2(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parserules() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 52 + 1,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parseskip();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsepragma();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseskip();
          if (s4 !== peg$FAILED) {
            peg$reportedPos = s1;
            s2 = peg$c4(s3);
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c0;
      }
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parseskip();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseruleDef();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseskip();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s1;
              s2 = peg$c5(s3);
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$parseskip();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsepragma();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseskip();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s1;
              s2 = peg$c4(s3);
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
        if (s1 === peg$FAILED) {
          s1 = peg$currPos;
          s2 = peg$parseskip();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseruleDef();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseskip();
              if (s4 !== peg$FAILED) {
                peg$reportedPos = s1;
                s2 = peg$c5(s3);
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$c0;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$c0;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$c0;
          }
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseskip() {
      var s0, s1;

      var key    = peg$currPos * 52 + 2,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = [];
      s1 = peg$parseeof();
      if (s1 === peg$FAILED) {
        s1 = peg$parsecom();
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseeof();
        if (s1 === peg$FAILED) {
          s1 = peg$parsecom();
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseeof() {
      var s0;

      var key    = peg$currPos * 52 + 3,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      if (peg$c6.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 5) === peg$c8) {
          s0 = peg$c8;
          peg$currPos += 5;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c10) {
            s0 = peg$c10;
            peg$currPos += 4;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsecom() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 52 + 4,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c12;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c13); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (peg$c14.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          if (peg$c14.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c15); }
          }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsefeeders() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 52 + 5,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }
